Block Rotation Added

--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12A269" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
@@ -539,23 +539,8 @@
                                     <action selector="buttonPressed:" destination="ock-t3-pLg" eventType="touchUpInside" id="1L6-we-2xS"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="D5h-3y-hi6">
-                                <rect key="frame" x="21" y="171" width="112" height="114"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Gym Schedule" image="Documents-3.png">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="buttonPressed:" destination="ock-t3-pLg" eventType="touchUpInside" id="MbV-Ic-iX9"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="huB-SP-Al8">
-                                <rect key="frame" x="199" y="27" width="112" height="114"/>
+                                <rect key="frame" x="193" y="27" width="112" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Course Book" image="Documents-2.png">
@@ -570,7 +555,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cIg-mw-dHM">
-                                <rect key="frame" x="199" y="171" width="112" height="114"/>
+                                <rect key="frame" x="192" y="199" width="112" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Important Dates" image="Documents-4.png">
@@ -585,7 +570,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="fBr-sn-9Fg">
-                                <rect key="frame" x="104" y="307" width="112" height="114"/>
+                                <rect key="frame" x="20" y="199" width="112" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Timetable" image="Documents-5.png">
@@ -607,28 +592,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Course Book" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="Zsx-Hu-Ocb">
-                                <rect key="frame" x="199" y="135" width="112" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Gym Schedule" lineBreakMode="tailTruncation" minimumFontSize="10" id="cIx-cS-cpU">
-                                <rect key="frame" x="22" y="272" width="111" height="34"/>
+                                <rect key="frame" x="193" y="135" width="112" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Important Dates" lineBreakMode="tailTruncation" minimumFontSize="10" id="Gq5-qQ-qc7">
-                                <rect key="frame" x="194" y="270" width="123" height="38"/>
+                                <rect key="frame" x="187" y="298" width="123" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Timetable" lineBreakMode="tailTruncation" minimumFontSize="10" id="ZSW-db-THC">
-                                <rect key="frame" x="124" y="418" width="72" height="21"/>
+                                <rect key="frame" x="40" y="310" width="72" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -723,7 +701,6 @@
         <image name="Center Logo-2.png" width="300" height="300"/>
         <image name="Documents-1.png" width="650" height="650"/>
         <image name="Documents-2.png" width="650" height="650"/>
-        <image name="Documents-3.png" width="650" height="650"/>
         <image name="Documents-4.png" width="650" height="650"/>
         <image name="Documents-5.png" width="650" height="650"/>
         <image name="Header 1.png" width="660" height="168"/>
@@ -767,11 +744,6 @@
         <class className="HomePageViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomePageViewController.h"/>
             <relationships>
-                <relationship kind="action" name="longPressDetected:" candidateClass="UIGestureRecognizer"/>
-                <relationship kind="action" name="pinchDetected:" candidateClass="UIGestureRecognizer"/>
-                <relationship kind="action" name="rotationDetected:" candidateClass="UIGestureRecognizer"/>
-                <relationship kind="action" name="swipeDetected:" candidateClass="UIGestureRecognizer"/>
-                <relationship kind="action" name="tapDetected:" candidateClass="UIGestureRecognizer"/>
                 <relationship kind="outlet" name="about" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="dayLabel" candidateClass="UILabel"/>
