--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -57,7 +57,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="MMj-ql-9Hz" kind="modal" modalTransitionStyle="partialCurl" id="s1Y-Mq-piX"/>
+                                    <segue destination="MMj-ql-9Hz" kind="push" id="s1Y-Mq-piX"/>
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Block rotation shown on school days" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="GT6-3R-RtS">
@@ -425,13 +425,26 @@
                                 <rect key="frame" x="0.0" y="-57" width="320" height="537"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Student Council - Coming Soon!" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="QqI-L5-3x7">
-                                <rect key="frame" x="25" y="261" width="271" height="39"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Athletics - Coming Soon!" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="QqI-L5-3x7">
+                                <rect key="frame" x="20" y="220" width="271" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" id="78X-xs-T0y">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="3fz-fa-6pH">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="aTY-iE-5OD">
+                                            <connections>
+                                                <segue destination="ah6-Wx-kTY" kind="push" id="Z71-S7-d9N"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -779,4 +792,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Z71-S7-d9N"/>
+    </inferredMetricsTieBreakers>
 </document>
