--- a/Sentinel/StandingsCustomCell.xib
+++ b/Sentinel/StandingsCustomCell.xib
@@ -42,7 +42,7 @@
 							<object class="IBUILabel" id="915412771">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 11}, {46, 21}}</string>
+								<string key="NSFrame">{{8, 5}, {118, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="860129661"/>
@@ -76,7 +76,7 @@
 							<object class="IBUILabel" id="860129661">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{102, 11}, {42, 21}}</string>
+								<string key="NSFrame">{{146, 5}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="87722767"/>
@@ -86,7 +86,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">wins</string>
+								<string key="IBUIText">W</string>
 								<reference key="IBUITextColor" ref="553157001"/>
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
@@ -97,7 +97,7 @@
 							<object class="IBUILabel" id="87722767">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{184, 11}, {49, 21}}</string>
+								<string key="NSFrame">{{181, 5}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="691850390"/>
@@ -107,7 +107,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">losses</string>
+								<string key="IBUIText">L</string>
 								<reference key="IBUITextColor" ref="553157001"/>
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
@@ -118,17 +118,57 @@
 							<object class="IBUILabel" id="691850390">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 11}, {42, 21}}</string>
+								<string key="NSFrame">{{215, 5}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="261799806"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">ties</string>
+								<string key="IBUIText">T</string>
+								<reference key="IBUITextColor" ref="553157001"/>
+								<reference key="IBUIHighlightedColor" ref="280563759"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<reference key="IBUIFontDescription" ref="158263807"/>
+								<reference key="IBUIFont" ref="81488275"/>
+							</object>
+							<object class="IBUILabel" id="261799806">
+								<reference key="NSNextResponder" ref="305503407"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{246, 5}, {28, 21}}</string>
+								<reference key="NSSuperview" ref="305503407"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">GP</string>
+								<reference key="IBUITextColor" ref="553157001"/>
+								<reference key="IBUIHighlightedColor" ref="280563759"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<reference key="IBUIFontDescription" ref="158263807"/>
+								<reference key="IBUIFont" ref="81488275"/>
+							</object>
+							<object class="IBUILabel" id="5025519">
+								<reference key="NSNextResponder" ref="305503407"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{280, 5}, {28, 21}}</string>
+								<reference key="NSSuperview" ref="305503407"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">P</string>
 								<reference key="IBUITextColor" ref="553157001"/>
 								<reference key="IBUIHighlightedColor" ref="280563759"/>
 								<int key="IBUIBaselineAdjustment">0</int>
@@ -137,7 +177,7 @@
 								<reference key="IBUIFont" ref="81488275"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 43}</string>
+						<string key="NSFrameSize">{325, 32}</string>
 						<reference key="NSSuperview" ref="871407250"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="915412771"/>
@@ -153,13 +193,14 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 44}</string>
+				<string key="NSFrameSize">{325, 33}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="305503407"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="305503407"/>
+				<real value="33" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -196,6 +237,22 @@
 					</object>
 					<int key="connectionID">10</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">gamesPlayed</string>
+						<reference key="source" ref="871407250"/>
+						<reference key="destination" ref="261799806"/>
+					</object>
+					<int key="connectionID">13</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">points</string>
+						<reference key="source" ref="871407250"/>
+						<reference key="destination" ref="5025519"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -221,9 +278,11 @@
 						<reference key="object" ref="871407250"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="915412771"/>
-							<reference ref="860129661"/>
-							<reference ref="87722767"/>
 							<reference ref="691850390"/>
+							<reference ref="87722767"/>
+							<reference ref="860129661"/>
+							<reference ref="261799806"/>
+							<reference ref="5025519"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -247,12 +306,24 @@
 						<reference key="object" ref="691850390"/>
 						<reference key="parent" ref="871407250"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">11</int>
+						<reference key="object" ref="261799806"/>
+						<reference key="parent" ref="871407250"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">12</int>
+						<reference key="object" ref="5025519"/>
+						<reference key="parent" ref="871407250"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">StandingsCustomCell</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -264,7 +335,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">10</int>
+			<int key="maxID">14</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
