Athletics With Standings

--- a/Sentinel/StandingsCustomCell.xib
+++ b/Sentinel/StandingsCustomCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">12C60</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
+		<string key="IBDocument.AppKitVersion">1187.34</string>
+		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1930</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -42,7 +42,7 @@
 							<object class="IBUILabel" id="915412771">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{8, 5}, {118, 21}}</string>
+								<string key="NSFrame">{{8, 3}, {118, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="860129661"/>
@@ -56,6 +56,7 @@
 								<object class="NSColor" key="IBUITextColor" id="553157001">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
+									<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 								</object>
 								<object class="NSColor" key="IBUIHighlightedColor" id="280563759">
 									<int key="NSColorSpace">3</int>
@@ -76,7 +77,7 @@
 							<object class="IBUILabel" id="860129661">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{146, 5}, {28, 21}}</string>
+								<string key="NSFrame">{{146, 3}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="87722767"/>
@@ -97,7 +98,7 @@
 							<object class="IBUILabel" id="87722767">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{181, 5}, {28, 21}}</string>
+								<string key="NSFrame">{{181, 3}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="691850390"/>
@@ -118,7 +119,7 @@
 							<object class="IBUILabel" id="691850390">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{215, 5}, {28, 21}}</string>
+								<string key="NSFrame">{{215, 3}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="261799806"/>
@@ -139,7 +140,7 @@
 							<object class="IBUILabel" id="261799806">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{246, 5}, {28, 21}}</string>
+								<string key="NSFrame">{{246, 3}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -159,7 +160,7 @@
 							<object class="IBUILabel" id="5025519">
 								<reference key="NSNextResponder" ref="305503407"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{280, 5}, {28, 21}}</string>
+								<string key="NSFrame">{{280, 3}, {28, 21}}</string>
 								<reference key="NSSuperview" ref="305503407"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -177,7 +178,7 @@
 								<reference key="IBUIFont" ref="81488275"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{325, 32}</string>
+						<string key="NSFrameSize">{325, 27}</string>
 						<reference key="NSSuperview" ref="871407250"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="915412771"/>
@@ -193,7 +194,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{325, 33}</string>
+				<string key="NSFrameSize">{325, 28}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="305503407"/>
@@ -387,10 +388,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
