--- a/Sentinel/en.lproj/MainStoryboard.storyboard
+++ b/Sentinel/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="wYw-Cs-v7p">
     <dependencies>
-        <deployment defaultVersion="1296" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Home Page View Controller-->
@@ -135,7 +135,6 @@
         <!--Athletics Home View Controller - Athletics-->
         <scene sceneID="Ebw-P6-7BM">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QXx-ox-8Zd" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="jRX-Wf-1fl" customClass="AthleticsHomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ae9-Fm-V6c">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
@@ -164,6 +163,7 @@
                         <outlet property="athleticsTableView" destination="yL9-nT-p7K" id="z54-eS-iqM"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QXx-ox-8Zd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-97" y="741"/>
         </scene>
@@ -216,7 +216,7 @@
             <objects>
                 <tableViewController id="yOp-Qi-6OZ" customClass="EventsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r9P-YP-NNM">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
@@ -401,33 +401,12 @@
             </objects>
             <point key="canvasLocation" x="-1388" y="865"/>
         </scene>
-        <!--Athletics Tab Bar View Controller-->
-        <scene sceneID="wSU-HA-wov">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vyd-0v-JRa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tabBarController definesPresentationContext="YES" id="7qQ-Kp-68R" customClass="AthleticsTabBarViewController" sceneMemberID="viewController">
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="S3i-jS-Vkh">
-                        <rect key="frame" x="129" y="330" width="163" height="49"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="PDG-R3-jYt" kind="relationship" relationship="viewControllers" id="e6q-hq-TtS"/>
-                        <segue destination="mAe-EM-dw7" kind="relationship" relationship="viewControllers" id="9qR-0Q-SUf"/>
-                    </connections>
-                </tabBarController>
-            </objects>
-            <point key="canvasLocation" x="379" y="741"/>
-        </scene>
         <!--Standings View Controller - Standings-->
         <scene sceneID="uSs-DS-tll">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iQb-qK-gVG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="mAe-EM-dw7" customClass="StandingsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kxi-Yq-K2g">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
+                        <rect key="frame" x="0.0" y="44" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
@@ -438,38 +417,9 @@
                     <tabBarItem key="tabBarItem" title="Standings" id="RqD-Bt-7Rk"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iQb-qK-gVG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="991" y="475"/>
-        </scene>
-        <!--Table View Controller - Schedule-->
-        <scene sceneID="PNJ-Dt-leg">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="340-Xp-zqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="PDG-R3-jYt" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uWj-m6-dOa">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="a49-gZ-TO1">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="PDG-R3-jYt" id="Ubo-cC-aDb"/>
-                            <outlet property="delegate" destination="PDG-R3-jYt" id="wjm-ba-udY"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Schedule" id="Qpx-WN-Nzy"/>
-                </tableViewController>
-            </objects>
-            <point key="canvasLocation" x="991" y="1051"/>
+            <point key="canvasLocation" x="701" y="741"/>
         </scene>
         <!--Twitter View Controller - Twitter-->
         <scene sceneID="KSD-v4-9b7">
@@ -522,7 +472,7 @@
             <objects>
                 <tableViewController id="OKa-Pf-Zb4" customClass="StaffEmailViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tQo-ra-zm7">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
@@ -541,7 +491,7 @@
             <objects>
                 <tableViewController id="z9j-Tb-Sy0" customClass="WebsiteViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zS4-vJ-QKy">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
@@ -597,7 +547,7 @@
             <objects>
                 <viewController id="ock-t3-pLg" customClass="DocumentsViewController" sceneMemberID="viewController">
                     <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" canCancelContentTouches="NO" id="9yB-rX-slp">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="431"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Tv7-zH-7BL">
@@ -707,7 +657,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="AnnouncementsViewController" id="asr-zi-TAR" customClass="AnnouncementsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ucm-hL-QR8">
-                        <rect key="frame" x="0.0" y="44" width="320" height="387"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
@@ -805,13 +755,9 @@
         <class className="AthleticsHomeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AthleticsHomeViewController.h"/>
             <relationships>
-                <relationship kind="action" name="feedback:"/>
                 <relationship kind="outlet" name="athleticsTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
             </relationships>
-        </class>
-        <class className="AthleticsTabBarViewController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AthleticsTabBarViewController.h"/>
         </class>
         <class className="DocumentsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DocumentsViewController.h"/>
